fix: Inserted text-align: center for container-img for CenterIMG

--- a/css/contatc.css
+++ b/css/contatc.css
@@ -12,6 +12,10 @@
     width: 80vw;
 }
 
+.container-img {
+    text-align: center;
+}
+
 h1 {
     text-align: center;
     font-style: normal;
